fixed put
